relative paths edit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="container flex">
                 <div class="compact-menu">
-                    <a href="#top"><img src="/assets/logo-menu.gif" class="logo"></a>
+                    <a href="#top"><img src="./assets/logo-menu.gif" class="logo"></a>
                     <a class="menu-icon">Menu</a>
                 </div>
 
@@ -38,7 +38,7 @@
         <main>
             <section>
                 <div class="hero">
-                    <a href="#services" class="hero-logo"><img src="/assets/logo.gif"></a>
+                    <a href="#services" class="hero-logo"><img src="./assets/logo.gif"></a>
                 </div>
                 <div class="hero-2">
                 </div>
@@ -52,19 +52,19 @@
                     <div class="structural-services">
                         <h2>Structural work</h2>
                         <figure class="service">
-                            <img src="/assets/betonarbeiten.png">
+                            <img src="./assets/betonarbeiten.png">
                             <figcaption>Formwork and concrete</figcaption>
                         </figure>
                         <figure class="service">
-                            <img src="/assets/bewehrung.png">
+                            <img src="./assets/bewehrung.png">
                             <figcaption>Reinforcement</figcaption>
                         </figure>
                         <figure class="service">
-                            <img src="/assets/mauerwerk.png">
+                            <img src="./assets/mauerwerk.png">
                             <figcaption>Masonry</figcaption>
                         </figure>
                         <figure class="service">
-                            <img src="/assets/teilelemente.png">
+                            <img src="./assets/teilelemente.png">
                             <figcaption>Prefabricated parts</figcaption>
                         </figure>
                     </div>
@@ -94,7 +94,7 @@
                     </div>
 
                     <div class="image about-img">
-                        <img src="assets/ueber-uns.jpg" alt="Concrete pouring on site.">
+                        <img src="./assets/ueber-uns.jpg" alt="Concrete pouring on site.">
                     </div>
                 </div>
             </section>
@@ -117,7 +117,7 @@
                     </div>
 
                     <div class="image project-gallery">
-                        <img src="/kaiserslautern/kaiserslautern_1.jpg" alt="Construction site in Kaiserslautern.">
+                        <img src="./kaiserslautern/kaiserslautern_1.jpg" alt="Construction site in Kaiserslautern.">
                     </div>
                 </div>
 
@@ -134,7 +134,7 @@
                     </div>
 
                     <div class="image project-gallery">
-                        <img src="/reitelstaffel/reiterstaffel-2.jpg" alt="The Reitelstaffel construction site in Cologne.">
+                        <img src="./reitelstaffel/reiterstaffel-2.jpg" alt="The Reitelstaffel construction site in Cologne.">
                     </div>
                 </div>
 
@@ -151,7 +151,7 @@
                     </div>
 
                     <div class="image project-gallery">
-                        <img src="/areal/areal-5.jpg" alt="Single-family houses under contruction in Wesseling.">
+                        <img src="./areal/areal-5.jpg" alt="Single-family houses under contruction in Wesseling.">
                     </div>
                 </div>
 
@@ -174,7 +174,7 @@
                     </div>
 
                     <div class="image">
-                        <img src="/assets/map.jpg" alt="Alba Bau Plus location on a map.">
+                        <img src="./assets/map.jpg" alt="Alba Bau Plus location on a map.">
                     </div>
                 </div>
 
