gallery feature added to projects section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
 
@@ -117,8 +117,32 @@
                         </ul>
                     </div>
 
-                    <div class="image project-gallery">
-                        <img src="./kaiserslautern/kaiserslautern_1.jpg" alt="Construction site in Kaiserslautern.">
+                    <div class="project-gallery" role="img" aria-label="Gallery of Kaiserslautern construction site.">
+                        <div class="slideshow-holder">
+                            <div class="slide-holder">
+                                <img src="./kaiserslautern/kaiserslautern_1.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./kaiserslautern/kaiserslautern_2.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./kaiserslautern/kaiserslautern_3.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./kaiserslautern/kaiserslautern_4.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./kaiserslautern/kaiserslautern_5.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./kaiserslautern/kaiserslautern_6.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="controls">
+                            <a href="#" class="prev control-link"><img src="./assets/chevron-left-small.svg"></a>
+                            <div class="steps">0 / 0</div>
+                            <a href="#" class="next control-link"><img src="./assets/chevron-right-small.svg"></a>
+                        </div>
                     </div>
                 </div>
 
@@ -134,8 +158,26 @@
                         </ul>
                     </div>
 
-                    <div class="image project-gallery">
-                        <img src="./reitelstaffel/reiterstaffel-2.jpg" alt="The Reitelstaffel construction site in Cologne.">
+                    <div class="project-gallery" role="img" aria-label="Gallery of Reiterstaffel construction site.">
+                        <div class="slideshow-holder">
+                            <div class="slide-holder">
+                                <img src="./reitelstaffel/reiterstaffel-1.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./reitelstaffel/reiterstaffel-2.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./reitelstaffel/reiterstaffel-3.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./reitelstaffel/reiterstaffel-4.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="controls">
+                            <a href="#" class="prev control-link"><img src="./assets/chevron-left-small.svg"></a>
+                            <div class="steps">0 / 0</div>
+                            <a href="#" class="next control-link"><img src="./assets/chevron-right-small.svg"></a>
+                        </div>
                     </div>
                 </div>
 
@@ -151,8 +193,29 @@
                         </ul>
                     </div>
 
-                    <div class="image project-gallery">
-                        <img src="./areal/areal-5.jpg" alt="Single-family houses under contruction in Wesseling.">
+                    <div class="project-gallery" role="img" aria-label="Gallery of Areal construction site.">
+                        <div class="slideshow-holder">
+                            <div class="slide-holder">
+                                <img src="./areal/areal-1.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./areal/areal-2.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./areal/areal-3.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./areal/areal-4.jpg" alt="">
+                            </div>
+                            <div class="slide-holder">
+                                <img src="./areal/areal-5.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="controls">
+                            <a href="#" class="prev control-link"><img src="./assets/chevron-left-small.svg"></a>
+                            <div class="steps">0 / 0</div>
+                            <a href="#" class="next control-link"><img src="./assets/chevron-right-small.svg"></a>
+                        </div>
                     </div>
                 </div>
 
@@ -193,6 +256,7 @@
     
         </footer>
 
-        <script src="js/menu.js"></script>
+        <script src="./js/menu.js"></script>
+        <script src="./js/slideshow.js"></script>
     </body>
 </html>
