--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Alba Bau Plus GmbH</title>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
         <link href="css/base.css" type="text/css" rel="stylesheet">
-        <link href="css/styles.css" type="text/css" rel="stylesheet">
+        <link href="sass/styles.css" type="text/css" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -16,7 +16,7 @@
     <body>
         <div id="top"></div>
         <header>
-            <div class="container flex">
+            <div class="container">
                 <div class="compact-menu">
                     <a href="#top"><img src="./assets/logo-menu.gif" class="logo"></a>
                     <a class="menu-icon">Menu</a>
@@ -80,7 +80,7 @@
             </section>
 
             <section id="about" class="about">
-                <div class="container flex">
+                <div class="container">
                     <div class="description">
                         <div class="heading-align">
                             <h1>About us</h1>    
@@ -105,7 +105,7 @@
                     <h1>Projects</h1>    
                 </div>
 
-                <div class="container flex reversed-row">
+                <div class="container reversed-row">
                     <div class="description">
                         <h2>Kaiserslautern</h2>
                         <h3>3 Multi-family houses</h3>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
 
-                <div class="container flex">
+                <div class="container">
                     <div class="description">
                         <h2>Reiterstaffel Quarter, Cologne</h2>
                         <h3>Construction site 1, 2, 3, 6, 7</h3>
@@ -181,7 +181,7 @@
                     </div>
                 </div>
 
-                <div class="container flex reversed-row">
+                <div class="container reversed-row">
                     <div class="description">
                         <h2>Areal, Wesseling</h2>
                         <h3>36 single-family houses</h3>
@@ -223,7 +223,7 @@
             </section>
 
             <section id="contact" class="contact">
-                <div class="container flex">
+                <div class="container">
                     <div class="description">
                         <div class="heading-align">
                             <h1>Contact</h1>    
